# sql-data-service

./: Dockerfile  Makefile  pyproject.toml
src/sql_data_service/: app.py  bibou.py  dialects.py  main.py  models.py  operators.py  test.py  translate.py  translate_pipeline_sql.py
src/sql_data_service/connectors/: __init__.py  base.py  mysql.py  postgresql.py
src/sql_data_service/models/: __init__.py  main.py  mysql.py  postgresql.py
src/sql_data_service/mysql/: connection.py  models.py  preview.py  translate.py
src/sql_data_service/postgresql/: connection.py  models.py  preview.py  translate.py
src/sql_data_service/translators/: __init__.py  athena.py  base.py  googlebigquery.py  mysql.py  postgresql.py  redshift.py  snowflake.py
tests/: conftest.py  docker-compose.yml  test_main.py  test_preview.py  test_sql_data_service.py  test_status.py  test_translate.py  test_translate_pipeline.py
tests/__fixtures__/data/: labels.csv  labels2.csv  logins.csv  logins2.csv  users.csv
tests/__fixtures__/init-mysql/: users.sql
tests/__fixtures__/init-postgresql/: users.sql
tests/__fixtures__/mysql/: labels.sql  labels2.sql  logins.sql  logins2.sql
tests/__fixtures__/postgresql/: labels.sql  labels2.sql  logins.sql  logins2.sql  users.sql
tests/postgresql/: test_translate_pipeline.py
