[tool.poetry]
name = "sql-data-service"
version = "0.0.0"
description = "A service to deliver data from configurable SQL requests"
authors = ["Toucan Toco <dev@toucantoco.com>"]
repository = "https://github.com/ToucanToco/sql-data-service"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
colorama = "^0.4.4"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.950"
pre-commit = "^2.18.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 100
target-version = ["py310"]
color = true

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
line_length = 100
multi_line_output = 3
indent = 4
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
combine_as_imports = true
color_output = true

[tool.mypy]
python_version = "3.10"
files = "src,tests"
pretty = true
strict = true
show_error_codes = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if T.TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
